sort.baseball.SelectBaseball.scala.error
Compilation error:
SelectBaseball:16: error: value += is not a member of Int
      if (getCouleurJoueur(i,j) != -1) nbJoueursParCouleur(getCouleurJoueur(i,j)) += 1;
                                                                                  ^SelectBaseball:22: error: value < is not a member of List[Int]
    if (nbJoueursParCouleur < nbPos) origBaseTrou = i;
                            ^SelectBaseball:25: error: not found: value origPos
  deplacerTrou(origPos, 0, 1);
               ^